--- a/public/panel-admin.html
+++ b/public/panel-admin.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Panel Admin</title>
   <link rel="stylesheet" href="css/panel-admin.css">
 </head>
+
 <body>
   <div class="admin-panel-container">
     <div class="news-header mb-5 fade-up-section text-center">
-        <h1 id="titulo-siguiendo" style="font-size: 70px;"></h1>
-        <p class="text-muted">Gestión completa del sistema administrativo.</p>
-      </div>
+      <h1 id="titulo-siguiendo" style="font-size: 70px;"></h1>
+      <p class="text-muted">Gestión completa del sistema administrativo.</p>
+    </div>
 
     <ul class="nav nav-tabs admin-tabs" id="adminTabs" role="tablist">
       <li class="nav-item" role="presentation">
@@ -22,7 +24,8 @@
         </button>
       </li>
       <li class="nav-item" role="presentation">
-        <button class="nav-link" id="publicaciones-tab" data-bs-toggle="tab" data-bs-target="#publicaciones" type="button">
+        <button class="nav-link" id="publicaciones-tab" data-bs-toggle="tab" data-bs-target="#publicaciones"
+          type="button">
           <i class="bi bi-file-text-fill"></i>
           Todas las Publicaciones
           <span class="badge bg-info" id="badge-publicaciones">0</span>
@@ -57,7 +60,8 @@
         <div class="admin-section-header">
           <h2 id="pub-t">Todas las Publicaciones</h2>
           <div class="admin-filters">
-            <input type="text" class="form-control form-control-sm" id="buscarPublicacion" placeholder="Buscar por usuario o contenido...">
+            <input type="text" class="form-control form-control-sm" id="buscarPublicacion"
+              placeholder="Buscar por usuario o contenido...">
             <button class="btn btn-outline-primary btn-sm" onclick="cargarTodasPublicaciones()">
               <i class="bi bi-arrow-clockwise"></i> Recargar
             </button>
@@ -127,22 +131,27 @@
   </div>
 
   <div class="modal fade" id="modalConfirmacion" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-sm"> <div class="modal-content bg-dark border-0 shadow-lg text-center p-3" style="border-radius: 25px;">
+    <div class="modal-dialog modal-dialog-centered modal-sm">
+      <div class="modal-content bg-dark border-0 shadow-lg text-center p-3" style="border-radius: 25px;">
         <div class="modal-body">
           <div class="mb-3">
-              <i class="bi bi-trash3-fill text-danger" style="font-size: 2.5rem;"></i>
+            <i class="bi bi-trash3-fill text-danger" style="font-size: 2.5rem;"></i>
           </div>
           <h5 class="titulo-wow mb-2" id="confirmTitle" style="font-size: 1.2rem;"></h5>
           <p id="confirmMessage" class="text-white-50 small px-2"></p>
         </div>
         <div class="d-flex justify-content-center gap-2 pb-2">
-          <button type="button" class="btn btn-link text-decoration-none text-muted" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-danger btn-sm px-4" id="btnConfirmarAccion" style="border-radius: 12px; font-weight: 600;">Confirmar</button>
+          <button type="button" class="btn btn-link text-decoration-none text-muted"
+            data-bs-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-danger btn-sm px-4" id="btnConfirmarAccion"
+            style="border-radius: 12px; font-weight: 600;">Confirmar</button>
         </div>
       </div>
     </div>
   </div>
 
+  <script src="/js/utils.js"></script>
+  <script src="/js/components/PublicacionCard.js"></script>
   <script src="/js/panel-admin.js"></script>
   <script>
     animarTituloGlobal('#titulo-siguiendo', 'Panel de Administrador');
@@ -150,9 +159,10 @@
     animarTituloGlobal('#pub-t', 'Todas las Publicaciones');
     animarTituloGlobal('#gestion-usu', 'Gestión de Usuarios');
 
-  document.querySelectorAll('.modal').forEach(modal => {
-    document.body.appendChild(modal);
-  });
+    document.querySelectorAll('.modal').forEach(modal => {
+      document.body.appendChild(modal);
+    });
   </script>
 </body>
+
 </html>
