--- a/public/panel-admin.html
+++ b/public/panel-admin.html
@@ -38,6 +38,14 @@
           <span class="badge bg-primary" id="badge-usuarios">0</span>
         </button>
       </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="cuentas-eliminadas-tab" data-bs-toggle="tab" data-bs-target="#cuentasEliminadas"
+          type="button">
+          <i class="bi bi-person-x-fill"></i>
+          Cuentas Eliminadas
+          <span class="badge bg-danger" id="badge-cuentas-eliminadas">0</span>
+        </button>
+      </li>
     </ul>
 
     <div class="tab-content admin-content" id="adminTabsContent">
@@ -97,6 +105,22 @@
           </div>
         </div>
       </div>
+
+      <div class="tab-pane fade" id="cuentasEliminadas" role="tabpanel">
+        <div class="admin-section-header">
+          <h2 id="cuentas-el-titulo">Cuentas Eliminadas</h2>
+          <button class="btn btn-outline-secondary btn-sm" onclick="cargarCuentasEliminadas()">
+            <i class="bi bi-arrow-clockwise"></i> Recargar
+          </button>
+        </div>
+        <div id="listaCuentasEliminadas" class="admin-list">
+          <div class="text-center p-5">
+            <div class="spinner-border text-danger" role="status"></div>
+            <p class="mt-3 text-muted">Cargando registros...</p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
@@ -158,6 +182,7 @@
     animarTituloGlobal('#pub-rep', 'Publicaciones Reportadas');
     animarTituloGlobal('#pub-t', 'Todas las Publicaciones');
     animarTituloGlobal('#gestion-usu', 'Gestión de Usuarios');
+    animarTituloGlobal('#cuentas-el-titulo', 'Cuentas Eliminadas');
 
     document.querySelectorAll('.modal').forEach(modal => {
       document.body.appendChild(modal);
