se agregó una nueva sección en el panel adimin de gráficas :D (80)

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/navbar-glass.css">
   <link rel="stylesheet" href="css/toast-musical.css">
   <link rel="stylesheet" href="css/cursor-toggle.css">
+  <link rel="stylesheet" href="css/panel-admin.css">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
@@ -380,6 +381,8 @@
   <script src="/js/temas.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/components/PublicacionCard.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+  <script src="js/panel-estadisticas.js"></script>
 </body>
 
 </html>
